trunk/Archive/b09efd59be75e347c103c4bde4158689-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:13:25: error: converting to 'Test' from initializer list would use explicit constructor 'Test::Test(std::initializer_list<int>)'
     Test t = {1, 2, 3, 4};
                         ^
